crates/cribo/tests/snapshots/bundled_code@private_module_vars.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/private_module_vars/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n):
        return object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = globals()[self._entry[1]]
        if module is not None:
            if getattr(module, '_cribo_machinery_loaded', False):
                saved = type(self)._pristine.get(id(module))
                fresh = _cribo.types.SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder.register('pkg._internal', '_cribo_init___cribo_73cafd_pkg__internal', 'pkg__internal', False)
_cribo_finder_local.register('pkg', None, 'pkg', True)
_cribo_finder.register('pkg.consumer', None, None, False, {'get_validators': 'get_validators'})
pkg__internal = _cribo.types.SimpleNamespace(__name__='pkg._internal', __initializing__=False, __initialized__=False)
_cribo_finder.bind('pkg._internal', pkg__internal)
def _cribo_init___cribo_73cafd_pkg__internal(_cribo_self):
    if getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'pkg'
    _cribo_self.__doc__ = 'Internal module with private variables.'
    """Internal module with private variables."""
    re = _cribo.re
    _cribo_self.re = re
    _cribo_self.re = re
    _VALID_HEADER_NAME_RE_BYTE = _cribo.re.compile(rb"^[^:\s][^:\r\n]*$")
    _cribo_self._VALID_HEADER_NAME_RE_BYTE = _VALID_HEADER_NAME_RE_BYTE
    _VALID_HEADER_NAME_RE_STR = _cribo.re.compile(r"^[^:\s][^:\r\n]*$")
    _cribo_self._VALID_HEADER_NAME_RE_STR = _VALID_HEADER_NAME_RE_STR
    _VALID_HEADER_VALUE_RE_BYTE = _cribo.re.compile(rb"^\S[^\r\n]*$|^$")
    _cribo_self._VALID_HEADER_VALUE_RE_BYTE = _VALID_HEADER_VALUE_RE_BYTE
    _VALID_HEADER_VALUE_RE_STR = _cribo.re.compile(r"^\S[^\r\n]*$|^$")
    _cribo_self._VALID_HEADER_VALUE_RE_STR = _VALID_HEADER_VALUE_RE_STR
    _HEADER_VALIDATORS_STR = _VALID_HEADER_NAME_RE_STR, _VALID_HEADER_VALUE_RE_STR
    _cribo_self._HEADER_VALIDATORS_STR = _HEADER_VALIDATORS_STR
    _HEADER_VALIDATORS_BYTE = _VALID_HEADER_NAME_RE_BYTE, _VALID_HEADER_VALUE_RE_BYTE
    _cribo_self._HEADER_VALIDATORS_BYTE = _HEADER_VALIDATORS_BYTE
    HEADER_VALIDATORS = {bytes: _HEADER_VALIDATORS_BYTE, str: _HEADER_VALIDATORS_STR}
    _cribo_self.HEADER_VALIDATORS = HEADER_VALIDATORS

    def process_headers(headers):
        """Example function that uses the validators."""
        return f"Processing {len(headers)} headers with validators"
    process_headers.__module__ = 'pkg._internal'
    process_headers.__qualname__ = 'process_headers'
    _cribo_self.process_headers = process_headers
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
pkg__internal.__init__ = _cribo_init___cribo_73cafd_pkg__internal
pkg = _cribo.types.SimpleNamespace(__name__='pkg', __initializing__=False, __initialized__=False, __path__=[])
pkg._internal = pkg__internal
pkg_consumer = _cribo.types.SimpleNamespace(__name__='pkg.consumer', __doc__='Consumer module that imports private variables from _internal module.')
pkg.consumer = pkg_consumer
"""Consumer module that imports private variables from _internal module."""
pkg__internal = pkg__internal.__init__(pkg__internal)
def get_validators():
    """Return the validators."""
    assert pkg._internal._HEADER_VALIDATORS_BYTE is not None
    assert pkg._internal._HEADER_VALIDATORS_STR is not None
    return pkg._internal.HEADER_VALIDATORS
get_validators.__module__ = 'pkg.consumer'
pkg_consumer.get_validators = get_validators
"""Test case for bundling modules that have private module variables accessed by other modules."""
validators = get_validators()
print(f"Got validators: {validators}")
assert isinstance(validators, dict)
assert bytes in validators
assert str in validators
assert len(validators[bytes]) == 2
assert len(validators[str]) == 2
print("✓ All tests passed!")
consumer = pkg.consumer
