crates/cribo/tests/snapshots/bundled_code@pyfail_class_level_cycles.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pyfail_class_level_cycles/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry):
        self._entry = entry

    def create_module(self, spec):
        namespace = self._entry[1]
        if namespace is not None:
            return globals()[namespace]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        try:
            globals()[init](module)
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('admin_class', '_cribo_init___cribo_7f7c68_admin_class', 'admin_class', False)
_cribo_finder.register('user_class', '_cribo_init___cribo_f4b9e6_user_class', 'user_class', False)
admin_class = _cribo.types.SimpleNamespace(__name__='admin_class', __initializing__=False, __initialized__=False)
user_class = _cribo.types.SimpleNamespace(__name__='user_class', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_7f7c68_admin_class(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    global user_class
    """Admin class module with circular dependency."""
    user_class = _cribo_init___cribo_f4b9e6_user_class(user_class)
    User = user_class.User
    self.User = User
    self.User = User

    class Admin(User):
        """Admin class that inherits from User."""

        def __init__(self, name):
            super().__init__(name)
            self.is_admin = True

        def demote_to_user(self):
            """Demote admin to regular user."""
            return User(self.name)
    Admin.__module__ = 'admin_class'
    Admin.__qualname__ = 'Admin'
    self.Admin = Admin
    self.__initialized__ = True
    self.__initializing__ = False
    return self
admin_class.__init__ = _cribo_init___cribo_7f7c68_admin_class
def _cribo_init___cribo_f4b9e6_user_class(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    global admin_class
    """User class module with circular dependency."""
    admin_class = _cribo_init___cribo_7f7c68_admin_class(admin_class)
    Admin = admin_class.Admin
    self.Admin = Admin
    self.Admin = Admin

    class User:
        """User class that references Admin class."""

        def __init__(self, name):
            self.name = name
            self.admin_reference = Admin

        def promote_to_admin(self):
            """Promote user to admin."""
            return self.admin_reference(self.name)
    User.__module__ = 'user_class'
    User.__qualname__ = 'User'
    self.User = User
    self.__initialized__ = True
    self.__initializing__ = False
    return self
user_class.__init__ = _cribo_init___cribo_f4b9e6_user_class
"""Test case with class-level circular dependencies."""
user_class = _cribo_init___cribo_f4b9e6_user_class(user_class)
User = user_class.User
admin_class = _cribo_init___cribo_7f7c68_admin_class(admin_class)
Admin = admin_class.Admin
def main():
    user = User("Alice")
    admin = Admin("Bob")
    print(f"User: {user.name}")
    print(f"Admin: {admin.name}")
if __name__ == "__main__":
    main()
