crates/cribo/tests/snapshots/bundled_code@pyfail_four_module_cycle.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pyfail_four_module_cycle/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry):
        self._entry = entry

    def create_module(self, spec):
        namespace = self._entry[1]
        if namespace is not None:
            return globals()[namespace]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        try:
            globals()[init](module)
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('module_a', '_cribo_init___cribo_1444c2_module_a', 'module_a', False)
_cribo_finder.register('module_b', '_cribo_init___cribo_277dcc_module_b', 'module_b', False)
_cribo_finder.register('module_c', '_cribo_init___cribo_21fc08_module_c', 'module_c', False)
_cribo_finder.register('module_d', '_cribo_init___cribo_f1543a_module_d', 'module_d', False)
module_a = _cribo.types.SimpleNamespace(__name__='module_a', __initializing__=False, __initialized__=False)
module_b = _cribo.types.SimpleNamespace(__name__='module_b', __initializing__=False, __initialized__=False)
module_c = _cribo.types.SimpleNamespace(__name__='module_c', __initializing__=False, __initialized__=False)
module_d = _cribo.types.SimpleNamespace(__name__='module_d', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_1444c2_module_a(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''

    def start_process():
        """Start the processing chain A -> B -> C -> D -> A"""
        process_in_b = _cribo_init___cribo_277dcc_module_b(globals()['module_b']).process_in_b
        return f"A({process_in_b()})"
    self.start_process = start_process

    def final_step():
        """Final step called by module_d to complete the cycle"""
        process_in_b = _cribo_init___cribo_277dcc_module_b(globals()['module_b']).process_in_b
        return "A_final"
    self.final_step = final_step
    self.__initialized__ = True
    self.__initializing__ = False
    return self
module_a.__init__ = _cribo_init___cribo_1444c2_module_a
def _cribo_init___cribo_277dcc_module_b(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''

    def process_in_b():
        """Process in B, depends on C"""
        process_in_c = _cribo_init___cribo_21fc08_module_c(globals()['module_c']).process_in_c
        return f"B({process_in_c()})"
    self.process_in_b = process_in_b

    def step_b():
        process_in_c = _cribo_init___cribo_21fc08_module_c(globals()['module_c']).process_in_c
        return "B_step"
    self.step_b = step_b
    self.__initialized__ = True
    self.__initializing__ = False
    return self
module_b.__init__ = _cribo_init___cribo_277dcc_module_b
def _cribo_init___cribo_21fc08_module_c(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''

    def process_in_c():
        """Process in C, depends on D"""
        process_in_d = _cribo_init___cribo_f1543a_module_d(globals()['module_d']).process_in_d
        return f"C({process_in_d()})"
    self.process_in_c = process_in_c

    def step_c():
        process_in_d = _cribo_init___cribo_f1543a_module_d(globals()['module_d']).process_in_d
        return "C_step"
    self.step_c = step_c
    self.__initialized__ = True
    self.__initializing__ = False
    return self
module_c.__init__ = _cribo_init___cribo_21fc08_module_c
def _cribo_init___cribo_f1543a_module_d(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''

    def process_in_d():
        """Process in D, depends back on A - completes the 4-module cycle"""
        final_step = _cribo_init___cribo_1444c2_module_a(globals()['module_a']).final_step
        return f"D({final_step()})"
    self.process_in_d = process_in_d

    def step_d():
        final_step = _cribo_init___cribo_1444c2_module_a(globals()['module_a']).final_step
        return "D_step"
    self.step_d = step_d
    self.__initialized__ = True
    self.__initializing__ = False
    return self
module_d.__init__ = _cribo_init___cribo_f1543a_module_d
module_a = _cribo_init___cribo_1444c2_module_a(module_a)
def main():
    result = module_a.start_process()
    print(f"Four module cycle result: {result}")
if __name__ == "__main__":
    main()
